--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,30 @@
 body {
   background-color: lightgrey;
 }
+
+.light-module {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  padding: 0 0% 2% 0%;
+  border-radius: 10px;
+  background-color: black;
+}
+
+.light-module-square {
+  height: 30%;
+  width: 85%;
+  margin: 10% auto 0 auto;
+}
+
+.light {
+  position: relative;
+  height: auto;
+  width: 100%;
+  padding-top: 100%;
+  border-radius: 50%;
+  background: white;
+}
+
+
+ 
