light functions Added functions to the light module to change the class name for the lights depending on the input color prop

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,22 @@ body {
   width: 100%;
   padding-top: 100%;
   border-radius: 50%;
-  background: white;
+}
+
+.red {
+  background-color: red;
+}
+
+.yellow {
+  background-color: yellow;
+}
+
+.green {
+  background-color: green;
+}
+
+.white {
+  background-color: white;
 }
 
 
