--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,19 @@
 body {
   background-color: lightgrey;
 }
-
+.main {
+  width: 65%;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+}
+.buttons {
+  width: auto;
+  margin-left: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
 .light-module {
   display: flex;
   flex-direction: column;
@@ -16,13 +28,11 @@ body {
   border-radius: 10px;
   background-color: black;
 }
-
 .light-module-square {
   height: 30%;
   width: 85%;
   margin: 10% auto 0 auto;
 }
-
 .light {
   position: relative;
   height: auto;
@@ -30,19 +40,15 @@ body {
   padding-top: 100%;
   border-radius: 50%;
 }
-
 .red {
   background-color: red;
 }
-
 .yellow {
   background-color: yellow;
 }
-
 .green {
   background-color: green;
 }
-
 .white {
   background-color: white;
 }
