--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,10 +22,25 @@ body {
   justify-content: space-evenly;
 }
 .change-button {
+  padding: 15px 25px;
+  width: 150px;
+  font-size: 16px;
   text-align: center;
-  padding: 10px;
-  border-radius: 50%;
-  background: #2cc1cc;  
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.change-button:hover {background-color: #3e8e41}
+
+.change-button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 .pulse-red {
   box-shadow: 0 0 0 rgba(204, 44, 44, 0.4);
