--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ body {
   margin: auto;
   display: flex;
   flex-direction: row;
-  z-index: -1;
+  justify-content: center;
 }
 .buttons {
   width: auto;
@@ -45,6 +45,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 20%;
+  min-width: 100px;
   padding: 0 0% 2% 0%;
   border-radius: 10px;
   background-color: black;
@@ -64,19 +65,20 @@ body {
 .red {
   background-color: red;
 }
+.red:hover {
+  background-color: red;
+}
 .yellow {
   background-color: yellow;
+}
+.light-green{
+  background-color: #4CAF50;
 }
 .green {
   background-color: green;
 }
 .white {
   background-color: white;
-}
-
-.pulse {
-  box-shadow: 0 0 0 rgba(76, 204, 44, 0.4);
-  animation: pulse 2s 1;
 }
 
 @-webkit-keyframes pulse {
@@ -103,5 +105,17 @@ body {
   100% {
       -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
       box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+  }
+}
+
+@media only screen and (max-width: 600px){
+  .main {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+  }
+  .buttons {
+    margin-left: 5%;
   }
 }
