--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,6 +89,12 @@ body {
     flex-direction: row;
   }
   .buttons {
-    margin-left: 5%;
+    margin-left: 15%;
+  }
+  .button {
+    padding: 10px 15px;
+    width: 100px;
+    font-size: 14px;
+    border-radius: 10px;
   }
 }
