--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,6 @@
   color: #666;
   font-weight: 400;
 }
-
 body {
   background-color: lightgrey;
 }
@@ -22,7 +21,7 @@ body {
   justify-content: space-evenly;
 }
 .button {
-  padding: 15px 25px;
+  padding: 15px 20px;
   width: 150px;
   font-size: 16px;
   text-align: center;
@@ -61,6 +60,12 @@ body {
   width: 100%;
   padding-top: 100%;
   border-radius: 50%;
+}
+.no-hover {
+  pointer-events: none;
+}
+.black-text { 
+  color: black;
 }
 .red {
   background-color: red;
